Bug 119350 - Page properties dialog is wrong about page margins
Summary: Page properties dialog is wrong about page margins
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
6.1.0.3 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.1.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-08-18 18:49 UTC by Regina Henschel
Modified: 2018-09-17 05:34 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2018-08-18 18:49:37 UTC
Start Draw with a new document. Goto menu Page, item Properties. Set the document size to DIN A5, landscape. Set the page margins to 0cm. Click OK.

Expected behavior: LibreOffice tells you, that the margin is smaller than your printer allows and ask you whether you want those margin nevertheless. If you want to keep your settings, you get 0cm margins.

Current behavior: The margins are set to 0cm without dialog, but if you open the dialog again, it shows 1cm for all four sides.

Try with 0.5cm, which should be allowed by your printer. Close and reopen the dialog. For me right and bottom margin appear as 1cm. Try with 2cm for all four sides. Again, when reopening the dialog you see 1cm for right and bottom.

If you click OK, the actual margins do not change to the shown values. That indicates, that the internal values are correct, but the display in the dialog is wrong.

Master view acts the same.

The dialog is OK in Version: 6.0.6.2 (x64)
Build ID: 0c292870b25a325b5ed35f6b45599d2ea4458e77
CPU threads: 8; OS: Windows 10.0; UI render: default; 
Locale: de-DE (en_US); Calc: CL

The dialog is broken in Version: 6.1.0.3 (x64)
Build ID: efb621ed25068d70781dc026f7e9c5187a4decd1
CPU threads: 8; OS: Windows 10.0; UI render: default; 
Locale: de-DE (en_US); Calc: CL
Comment 1 Jean-Baptiste Faure 2018-08-19 06:46:04 UTC
confirmed under Ubuntu 18.04 with Version: 6.1.1.0.0+
Build ID: 72fece73fbda7dc9fa34c4189cd9dfa10c9f2c51
Threads CPU : 4; OS : Linux 4.15; UI Render : par défaut; VCL: gtk3; 
Ubuntu_18.04_x86-64
Locale : fr-FR (fr_FR.UTF-8); Calc: threaded

If orientation is portrait, margins seem correct.

Best regards. JBF
Comment 2 raal 2018-08-19 06:57:32 UTC
I can confirm in Impress with format "screen 16:9",and in Draw with format A5( landscape)

Version: 6.2.0.0.alpha0+
Build ID: 4cb69cf33b5bf17030bcd263fe31258177c76d5e
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-08-18_05:13:44
Comment 3 raal 2018-08-19 07:26:39 UTC
This seems to have begun at the below commit.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks

 6ff8457c730200d2756bbe4207f74c69b8ab2732 is the first bad commit
commit 6ff8457c730200d2756bbe4207f74c69b8ab2732
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Sun Jun 17 18:41:40 2018 +0200

    source 7958091b06954a7b253fdebb9ea0313db9217959 6ff8457c730200d2756bbe4207f74c69b8ab2732 is the first bad commit
commit 6ff8457c730200d2756bbe4207f74c69b8ab2732
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Sun Jun 17 18:41:40 2018 +0200

    source 7958091b06954a7b253fdebb9ea0313db9217959
author	Caolán McNamara <caolanm@redhat.com>	2018-06-15 14:03:31 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-06-17 17:12:32 +0200
commit 7958091b06954a7b253fdebb9ea0313db9217959 (patch)
tree 614d4582389d92afc994ae143bdc2785cf7152b4
parent d60d695fcc5064e1f16842387fdce23456a64694 (diff)
weld SvxPageDescPage
Comment 4 Caolán McNamara 2018-08-21 11:07:12 UTC
prior to this change (and currently also) setting 0 into the margins and then toggling landscape/portrait or changing the paper format will auto change the margins to 1cm. Its this logic which is now activated when the dialog appears because of a toggle_handler.
Comment 5 Commit Notification 2018-08-21 16:37:11 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ccadef3d8500f7b83f803737e32df3f65f936c63

Resolves: tdf#119350 page with 0 margins shown as 1cm in page dialog

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2018-08-21 16:37:45 UTC
6.1 backport in gerrit
Comment 7 Commit Notification 2018-08-28 16:28:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c21e8bde3a2cf31e02d5eaf7a8773f6af6c67b3b&h=libreoffice-6-1

Resolves: tdf#119350 page with 0 margins shown as 1cm in page dialog

It will be available in 6.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 BogdanB 2018-09-17 05:34:21 UTC
Works as aspected on:

Version: 6.2.0.0.alpha0+
Build ID: e005ab5d40d358adb75a64e140d46f4bf605647d
CPU threads: 4; OS: Linux 4.15; UI render: GL; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-09-15_02:08:38
Locale: ro-RO (ro_RO.UTF-8); Calc: threaded