Resolves: tdf#119350 page with 0 margins shown as 1cm in page dialog

since...

commit 7958091b06954a7b253fdebb9ea0313db9217959
Date:   Fri Jun 15 14:03:31 2018 +0100

    weld SvxPageDescPage

because the toggle handler fires when the value of landscape is set,
change to a click handler which fires only when the user explicitly
clicks on it, which restore the original quirky behaviour

Change-Id: If93cc9e0b5d38d92844a1d85de53ee2da958efa0