cui/source/inc/page.hxx
@@ -137,7 +137,7 @@ private:
     void                Init_Impl();
     DECL_LINK(LayoutHdl_Impl, weld::ComboBoxText&, void);
     DECL_LINK(PaperBinHdl_Impl, weld::ComboBoxText&, void);
-    DECL_LINK(SwapOrientation_Impl, weld::ToggleButton&, void);
+    DECL_LINK(SwapOrientation_Impl, weld::Button&, void);
     void SwapFirstValues_Impl( bool bSet );
     DECL_LINK(BorderModify_Impl, weld::MetricSpinButton&, void);
     void InitHeadFoot_Impl( const SfxItemSet& rSet );
